# django-redis

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README  README.rst  RELEASING.rst  build-docs.sh  build-latest-docs.sh  client.py  codecov.yml  index.html  pyproject.toml  redis.py  requirements.txt  runtests-herd.py  runtests-sharded.py  runtests-unixsockets.py  runtests.py  setup.cfg  setup.py  sockettests.py  tcptests.py  tox.ini  tox.ini~Added django-stubs to lint dependencies
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
changelog.d/: 373  529.doc  536.feature  542.bugfix  548.feature  551.feature  553.misc  555.feature  556.feature  559.doc  564.bug  564.feature  568.misc  570.misc  576.misc  579.misc  598.feature  607.misc  609.misc  611.misc  626.misc  627.feature  633.misc  638.bugfix  638.removal  645.misc  646.bugfix  649.misc  657.feature  668.misc  677.doc  680.feature  688.feature  689.misc  690.misc  692.misc  693.misc  695.misc  696.misc  697.misc  (+31 more)
django_redis/: __init__.py  cache.py  compat.py  exceptions.py  hash_ring.py  pool.py  util.py
django_redis/client/: __init__.py  default.py  dummy.py  herd.py  sentinel.py  serializers.py  sharded.py
django_redis/client/mixins/: __init__.py  hashes.py  lists.py  protocols.py  sets.py  sorted_sets.py
django_redis/compressors/: base.py  gzip.py  identity.py  lz4.py  lzma.py  zlib.py  zstd.py
django_redis/serializers/: base.py  compressed.py  compressed_json.py  compressed_msgpack.py  compressed_pickle.py  crypted.py  dill.py  json.py  msgpack.py  pickle.py
doc/: Makefile  asciidoc.conf  content-docinfo.html  content.adoc  django-redis.asciidoc  index.html
doc/static/: niwi.css
docker/: docker-compose.yml  sentinel.conf
docker/base/: README.md
docker/sentinel/: sentinel.conf
docs/: Makefile  conf.py  index.rst
docs/_themes/kr/: layout.html
docs/_themes/sphinx_rtd_theme/: layout.html
docs/_themes/sphinx_rtd_theme/static/css/: niwi.css
docs/source/: auto-failover.rst  changelog.rst  conf.py  index.rst  setup.rst  sharding.rst
latest/: index.html
redis_cache/: __init__.py  cache.py  client.py  exceptions.py  hash_ring.py  pool.py  util.py
redis_cache/client/: __init__.py  default.py  experimental.py  herd.py  patched_herd.py  sentinel.py  sharded.py
redis_cache/stats/: urls.py  views.py
redis_cache/stats/static/redis_cache/: script.js  style.css
redis_cache/stats/templates/redis_cache/: stats.html  stats_include.html
static/: asciidoc.css
tests/: README.rst  README.txt  benchmark.py  conftest.py  runtests-dill.py  runtests-fakeredis.py  runtests-herd.py  runtests-json.py  runtests-lz4.py  runtests-msgpack.py  runtests-sentinel.py  runtests-sharded.py  runtests-unixsockets.py  runtests-zlib.py  runtests.py  settings.py  settings_wrapper.py  shell.py  start_redis.sh  test_backend.py  test_backend_async.py  test_backend_hash.py  test_backend_lists.py  test_backend_sets.py  test_backend_sorted_sets.py  test_cache_options.py  test_client.py  test_compressors.py  test_connection_factory.py  test_connection_params.py  test_connection_string.py  test_fakeredis.py  test_hashring.py  test_mixed_sync_async.py  test_serializers.py  test_session.py  test_sqlite.py  test_sqlite_dill.py  test_sqlite_failover.py  test_sqlite_herd.py  (+10 more)
tests/hashring_test/: tests.py
tests/redis_backend_testapp/: tests.py
tests/settings/: sqlite.py  sqlite_gzip.py  sqlite_herd.py  sqlite_json.py  sqlite_lz4.py  sqlite_msgpack.py  sqlite_sentinel.py  sqlite_sentinel_opts.py  sqlite_sharding.py  sqlite_usock.py  sqlite_zlib.py  sqlite_zstd.py
tests/testapp/: models.py  tests.py
